# PoW-Miners

./: .gitignore  README.md  alt-config.json  miner-balance.json  miner-config-devnet.example.json  package.json  tsconfig.json
gpu-miner/: Cargo.toml  README.md  build.sh
gpu-miner/kernels/: sha256_mining.cu  sha256_mining.ptx
gpu-miner/src/: benchmark.rs  chain.rs  config.rs  cpu.rs  cuda_miner.rs  gpu.rs  main.rs  miner.rs  opencl_miner.rs  pow.rs  solana_client.rs
privacy-miner/: check-miner-balance.ts  claims-db.ts  continuous-privacy-miner-arcium.ts  miner-balance-manager.ts
scripts/: check-comp-defs.ts  check-mxe.ts  check-new-mxe.ts  compare-idl.js  create-alt.ts  init-comp-defs.ts  initialize-privacy.ts
standard-miner/: continuous-gpu-miner.ts  continuous-miner.ts
